--- a/config.json
+++ b/config.json
@@ -1,14 +1,32 @@
-{
-  "rule": "capture", 
-  "random": 4,
-  "config": [
-    {
-      "function": "heuristicCountPieces",
-      "depth": 7
-    },
-    {
-      "function": "heuristicClusters",
-      "depth": 10
+[
+  {
+    "runs": 5,
+    "rule": "capture", 
+    "random": 4,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 6
+      },
+      "black": {
+        "function": "heuristicClusters",
+        "depth": 6
+      }
     }
-  ]
-}
+  },
+  {
+    "runs": 5,
+    "rule": "capture", 
+    "random": 2,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 7
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 7
+      }
+    }
+  }
+]
