feat: better setup for experiments and results evaluation
- generate-config.js pode gerar uma config pra várias combinações de profundidade, heurística etc.
- auto-run.js agora faz gera saída CSV que pode ser importada pro sqlite, facilitando bastante obter estatísticas dos resultados

--- a/config.json
+++ b/config.json
@@ -1,32 +1,254 @@
 [
   {
-    "runs": 50,
-    "rule": "capture", 
-    "random": 4,
+    "runs": 2,
     "players": {
       "white": {
         "function": "heuristicCountPieces",
-        "depth": 6
+        "depth": 3
       },
       "black": {
         "function": "heuristicClusters",
-        "depth": 6
+        "depth": 3
       }
-    }
+    },
+    "rule": 0
   },
   {
-    "runs": 50,
-    "rule": "capture", 
-    "random": 2,
+    "runs": 2,
     "players": {
       "white": {
         "function": "heuristicCountPieces",
-        "depth": 7
+        "depth": 3
       },
       "black": {
         "function": "heuristicWeighDistance",
-        "depth": 7
+        "depth": 3
       }
-    }
+    },
+    "rule": 0
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicClusters",
+        "depth": 3
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 3
+      }
+    },
+    "rule": 0
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 5
+      },
+      "black": {
+        "function": "heuristicClusters",
+        "depth": 5
+      }
+    },
+    "rule": 0
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 5
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 5
+      }
+    },
+    "rule": 0
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicClusters",
+        "depth": 5
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 5
+      }
+    },
+    "rule": 0
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 3
+      },
+      "black": {
+        "function": "heuristicClusters",
+        "depth": 3
+      }
+    },
+    "rule": 1
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 3
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 3
+      }
+    },
+    "rule": 1
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicClusters",
+        "depth": 3
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 3
+      }
+    },
+    "rule": 1
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 5
+      },
+      "black": {
+        "function": "heuristicClusters",
+        "depth": 5
+      }
+    },
+    "rule": 1
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 5
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 5
+      }
+    },
+    "rule": 1
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicClusters",
+        "depth": 5
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 5
+      }
+    },
+    "rule": 1
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 3
+      },
+      "black": {
+        "function": "heuristicClusters",
+        "depth": 3
+      }
+    },
+    "rule": 3
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 3
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 3
+      }
+    },
+    "rule": 3
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicClusters",
+        "depth": 3
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 3
+      }
+    },
+    "rule": 3
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 5
+      },
+      "black": {
+        "function": "heuristicClusters",
+        "depth": 5
+      }
+    },
+    "rule": 3
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 5
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 5
+      }
+    },
+    "rule": 3
+  },
+  {
+    "runs": 2,
+    "players": {
+      "white": {
+        "function": "heuristicClusters",
+        "depth": 5
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 5
+      }
+    },
+    "rule": 3
   }
 ]
