fix csv output, also add queries.sql

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 [
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicCountPieces",
@@ -14,7 +14,7 @@
     "rule": 0
   },
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicCountPieces",
@@ -28,7 +28,7 @@
     "rule": 0
   },
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicClusters",
@@ -42,7 +42,7 @@
     "rule": 0
   },
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicCountPieces",
@@ -56,7 +56,7 @@
     "rule": 0
   },
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicCountPieces",
@@ -70,7 +70,7 @@
     "rule": 0
   },
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicClusters",
@@ -84,7 +84,49 @@
     "rule": 0
   },
   {
-    "runs": 2,
+    "runs": 10,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 7
+      },
+      "black": {
+        "function": "heuristicClusters",
+        "depth": 7
+      }
+    },
+    "rule": 0
+  },
+  {
+    "runs": 10,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 7
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 7
+      }
+    },
+    "rule": 0
+  },
+  {
+    "runs": 10,
+    "players": {
+      "white": {
+        "function": "heuristicClusters",
+        "depth": 7
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 7
+      }
+    },
+    "rule": 0
+  },
+  {
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicCountPieces",
@@ -98,7 +140,7 @@
     "rule": 1
   },
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicCountPieces",
@@ -112,7 +154,7 @@
     "rule": 1
   },
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicClusters",
@@ -126,7 +168,7 @@
     "rule": 1
   },
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicCountPieces",
@@ -140,7 +182,7 @@
     "rule": 1
   },
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicCountPieces",
@@ -154,7 +196,7 @@
     "rule": 1
   },
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicClusters",
@@ -168,7 +210,49 @@
     "rule": 1
   },
   {
-    "runs": 2,
+    "runs": 10,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 7
+      },
+      "black": {
+        "function": "heuristicClusters",
+        "depth": 7
+      }
+    },
+    "rule": 1
+  },
+  {
+    "runs": 10,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 7
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 7
+      }
+    },
+    "rule": 1
+  },
+  {
+    "runs": 10,
+    "players": {
+      "white": {
+        "function": "heuristicClusters",
+        "depth": 7
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 7
+      }
+    },
+    "rule": 1
+  },
+  {
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicCountPieces",
@@ -182,7 +266,7 @@
     "rule": 3
   },
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicCountPieces",
@@ -196,7 +280,7 @@
     "rule": 3
   },
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicClusters",
@@ -210,7 +294,7 @@
     "rule": 3
   },
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicCountPieces",
@@ -224,7 +308,7 @@
     "rule": 3
   },
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicCountPieces",
@@ -238,7 +322,7 @@
     "rule": 3
   },
   {
-    "runs": 2,
+    "runs": 10,
     "players": {
       "white": {
         "function": "heuristicClusters",
@@ -247,6 +331,48 @@
       "black": {
         "function": "heuristicWeighDistance",
         "depth": 5
+      }
+    },
+    "rule": 3
+  },
+  {
+    "runs": 10,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 7
+      },
+      "black": {
+        "function": "heuristicClusters",
+        "depth": 7
+      }
+    },
+    "rule": 3
+  },
+  {
+    "runs": 10,
+    "players": {
+      "white": {
+        "function": "heuristicCountPieces",
+        "depth": 7
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 7
+      }
+    },
+    "rule": 3
+  },
+  {
+    "runs": 10,
+    "players": {
+      "white": {
+        "function": "heuristicClusters",
+        "depth": 7
+      },
+      "black": {
+        "function": "heuristicWeighDistance",
+        "depth": 7
       }
     },
     "rule": 3
